Add a lot of new variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 ENV=development
 GUNICORN_WORKERS=2
 GUNICORN_THREADS=2
+USER_ID=1000
+GROUP_ID=1000
+SRV_PATH=/home/example/srv
+DEBUG=False
+SECRET_KEY=<your password here>
