--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,21 @@ services:
   api:
     build:
       context: .
+      args:
+        - USER_ID=${USER_ID}
+        - GROUP_ID=${GROUP_ID}
     restart: always
     environment:
       - ENV=${ENV}
+      - DEBUG=${DEBUG}
+      - SRV_PATH=/app/srv
       - PORT=8080
       - GUNICORN_WORKERS=${GUNICORN_WORKERS}
       - GUNICORN_THREADS=${GUNICORN_THREADS}
+      - SSH_KEY_PRIV=${SSH_KEY_PRIV}
+      - SSH_KEY_PUB=${SSH_KEY_PUB}
+      - SSH_KNOW_HOSTS=${SSH_KNOW_HOSTS}
     ports:
       - 8080:8080
+    volumes:
+      - ${SRV_PATH}:/app/srv
