--- a/External/docker-compose.yml
+++ b/External/docker-compose.yml
@@ -12,13 +12,17 @@ services:
       - ENV=${ENV}
       - DEBUG=${DEBUG}
       - SRV_PATH=/app/srv
-      - PORT=8080
+      - PORT=${PORT}
       - GUNICORN_WORKERS=${GUNICORN_WORKERS}
       - GUNICORN_THREADS=${GUNICORN_THREADS}
+      - SECRET_KEY=${SECRET_KEY}
       - SSH_KEY_PRIV=${SSH_KEY_PRIV}
       - SSH_KEY_PUB=${SSH_KEY_PUB}
       - SSH_KNOW_HOSTS=${SSH_KNOW_HOSTS}
+      - INTERNAL_API_PORT=${INTERNAL_API_PORT}
     ports:
-      - 8080:8080
+      - ${PORT}:${PORT}
     volumes:
       - ${SRV_PATH}:/app/srv
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
