Add internal API URL as environment variables

--- a/External/.env.example
+++ b/External/.env.example
@@ -1,4 +1,5 @@
 ENV=development
+HOST=127.0.0.1
 PORT=7878
 DEBUG=1
 GUNICORN_WORKERS=2
@@ -8,3 +9,4 @@ GROUP_ID=1000
 SRV_PATH=/home/example/srv
 DEBUG=False
 SECRET_KEY=<your password here>
+INTERNAL_API_URL=https://example-api.tech/super-secret
