Re-organized environment variables

--- a/External/.env.example
+++ b/External/.env.example
@@ -4,9 +4,9 @@ PORT=7878
 DEBUG=1
 GUNICORN_WORKERS=2
 GUNICORN_THREADS=2
+SRV_PATH=../srv
+INTENT_PATH=../intent
+INTERNAL_API_URL=https://example-api.tech/super-secret
 USER_ID=1000
 GROUP_ID=1000
-SRV_PATH=/home/example/srv
-DEBUG=False
 SECRET_KEY=<your password here>
-INTERNAL_API_URL=https://example-api.tech/super-secret
