--- a/Internal/.env.example
+++ b/Internal/.env.example
@@ -5,4 +5,5 @@ DEBUG=1
 GUNICORN_WORKERS=2
 GUNICORN_THREADS=2
 SRV_PATH=/home/example/srv
-URL_SUFFIX=api
+INTENT_PATH=../intent
+URL_SUFFIX=great-unicorn-code
