--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 cfg/*
 !cfg/hosts.json.example
 mypli
+.env
 
 # Golang
 # If you prefer the allow list template instead of the deny list, see community template:
